disable wiring: https://github.com/louaykamel/wiring/issues/3

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -122,7 +122,7 @@ default = [
     "simd-json",
     "speedy",
     "savefile",
-    "wiring",
+#    "wiring",
 ]
 capnp = ["dep:capnp"]
 prost = ["dep:capnp", "dep:prost"]
