--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,16 @@
 name: build
 
 on:
+  workflow_dispatch:
   pull_request:
     branches: [ master ]
+  push:
+    branches:
+      - master
+    paths:
+      - 'Cargo.toml'
+      - 'benches/**'
+      - 'src/**'
 
 env:
   CI: true
@@ -71,9 +79,17 @@ jobs:
       - name: build
         shell: bash
         run: |
-          cargo build --benches --features regenerate-capnp,regenerate-flatbuffers,regenerate-prost
+          cargo build --benches --features regenerate
 
       - name: check generated code
         shell: bash
         run: |
           git diff --exit-code && echo 'ok!' || (echo 'committed generated code is not up to date!'; exit 1)
+
+      # build and test in dev mode with debug assertions enabled (and slow, uninteresting code
+      # disabled; only the encoders, and not the compression). this should quickly sanity check
+      # broken benchmarks, failing debug assertions, etc.
+      - name: test benches
+        shell: bash
+        run: |
+          cargo test --benches --no-default-features --features default-encoding-set
