--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,6 +72,7 @@ parity-scale-codec-derive = { version = "=3.6.12", optional = true }
 postcard = { version = "=1.1.1", features = ["alloc"], optional = true }
 pot = { version = "=3.0.1", optional = true }
 prost = { version = "=0.13.4", optional = true }
+protobuf = { version = "=3.7.1", optional = true }
 rkyv = { version = "=0.8.9", optional = true }
 rmp-serde = { version = "=1.3.0", optional = true }
 ron = { version = "=0.8.1", optional = true }
@@ -116,6 +117,7 @@ default-encoding-set = [
     "postcard",
     "pot",
     "prost",
+    "protobuf",
     "rkyv",
     "rmp-serde",
     "ron",
@@ -132,16 +134,18 @@ default-encoding-set = [
 
 measure-compression = []
 capnp = ["dep:capnp"]
-prost = ["dep:capnp", "dep:prost"]
+prost = ["dep:prost", "dep:capnp"]
+protobuf = ["dep:protobuf"]
 simd-json = ["dep:simd-json", "dep:simd-json-derive"]
 savefile = ["dep:savefile", "dep:savefile-derive"]
 scale = ["dep:parity-scale-codec", "dep:parity-scale-codec-derive"]
 
 # Enable these features to regenerate generated files rather than using the committed versions.
-regenerate = ["regenerate-capnp", "regenerate-flatbuffers", "regenerate-prost"]
+regenerate = ["regenerate-capnp", "regenerate-flatbuffers", "regenerate-prost", "regenerate-protobuf"]
 regenerate-capnp = ["dep:capnpc"]
 regenerate-flatbuffers = ["dep:flatc-rust"]
 regenerate-prost = ["dep:prost-build"]
+regenerate-protobuf = ["dep:protobuf-codegen"]
 
 [dev-dependencies]
 rand_pcg = "0.3.1"
@@ -151,6 +155,7 @@ capnp = "=0.20.3"
 capnpc = { version = "=0.20.1", optional = true }
 flatc-rust = { version = "=0.2.0", optional = true }
 prost-build = { version = "=0.13.4", optional = true }
+protobuf-codegen = { version = "=3.7.1", optional = true }
 
 [[bench]]
 harness = false
