--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,7 @@ build = "build.rs"
 bilrost = { version = "=0.1012.2", optional = true }
 bincode1 = { package = "bincode", version = "=1.3.3", optional = true }
 # Can't call it bincode2 because of a current issue of bincode2
-bincode = { package = "bincode", version = "=2.0.0-rc.3", optional = true }
+bincode = { package = "bincode", version = "=2.0.0", optional = true }
 bitcode = { version = "=0.6.4", optional = true }
 borsh = { version = "=1.5.3", features = ["derive"], optional = true }
 capnp = { version = "=0.20.3", optional = true }
