--- a/tools/config.json
+++ b/tools/config.json
@@ -18,15 +18,15 @@
     "do_not_edit_message": "<!-- AUTOMATICALLY GENERATED, DO NOT EDIT -->\n<!-- edit README.md.template instead -->",
     "crate_matching": {
         "bincode1": {
-            "name": "bincode",
+            "crate_name": "bincode",
             "version": "1"
         },
         "bincode": {
-            "name": "bincode",
+            "crate_name": "bincode",
             "version": "2"
         }
     },
-    "equivalent_encodings": {
+    "common_encodings": {
         "cbor4ii": "cbor",
         "ciborium": "cbor",
         "msgpacker": "messagepack",
