group and annotate libraries that target a common encoding (#106)
* group and annotate libraries that target a common encoding

* comments

* nanoserde todo

* rename do_not_edit field to be clearer that it's ok to edit the config.json file

* imports nit

* bincode isn't a common encoding

* cargo fmt

* rename some config fields for clarity

* PackageId::name --> crate_name
* Config::equivalent_encodings --> common_encodings

* cargo fmt once again

--- a/tools/config.json
+++ b/tools/config.json
@@ -15,15 +15,27 @@
             "description": "This data set is composed of mk48.io game updates that contain data with many exploitable patterns and invariants."
         }
     },
-    "do_not_edit": "<!-- AUTOMATICALLY GENERATED, DO NOT EDIT -->\n<!-- edit README.md.template instead -->",
-    "features": {
+    "do_not_edit_message": "<!-- AUTOMATICALLY GENERATED, DO NOT EDIT -->\n<!-- edit README.md.template instead -->",
+    "crate_matching": {
         "bincode1": {
-            "name": "bincode",
+            "crate_name": "bincode",
             "version": "1"
         },
         "bincode": {
-            "name": "bincode",
+            "crate_name": "bincode",
             "version": "2"
         }
+    },
+    "common_encodings": {
+        "cbor4ii": "cbor",
+        "ciborium": "cbor",
+        "msgpacker": "messagepack",
+        "parity-scale-codec": "scale",
+        "prost": "protobuf",
+        "protobuf": "protobuf",
+        "rmp-serde": "messagepack",
+        "serde_cbor": "cbor",
+        "serde_json": "json",
+        "simd-json": "json"
     }
 }
