--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ semver = "1.0.26"
 serde = "1.0"
 serde_json = "1.0"
 stylist = { version = "0.12", default-features = false }
-tempfile = "3.18"
+tempfile = "3.20"
 time = "0.3"
 wasm-bindgen = "0.2"
 web-sys = "0.3.77"
@@ -44,13 +44,13 @@ build = "build.rs"
 # Some features may require multiple dependencies to compile properly
 # For example, benchmarking bincode requires two features: "serde" and "bincode"
 [dependencies]
-bilrost = { version = "=0.1012.3", optional = true }
+bilrost = { version = "=0.1013.0", optional = true }
 bincode1 = { package = "bincode", version = "=1.3.3", optional = true }
 # Can't call it bincode2 because of a current issue of bincode2 (TODO: issue link?)
-bincode = { package = "bincode", version = "=2.0.0", optional = true }
-bitcode = { version = "=0.6.5", optional = true }
-borsh = { version = "=1.5.5", features = ["derive"], optional = true }
-capnp = { version = "=0.20.6", optional = true }
+bincode = { package = "bincode", version = "=2.0.1", optional = true }
+bitcode = { version = "=0.6.6", optional = true }
+borsh = { version = "=1.5.7", features = ["derive"], optional = true }
+capnp = { version = "=0.21.1", optional = true }
 cbor4ii = { version = "=1.0.0", features = [
     "use_std",
     "serde1",
@@ -59,42 +59,42 @@ ciborium = { version = "=0.2.2", optional = true }
 databuf = { version = "=0.5.0", optional = true }
 dlhn = { version = "=0.1.7", optional = true }
 flatbuffers = { version = "=25.2.10", optional = true }
-minicbor = { version = "=0.26.1", optional = true, features = [
+minicbor = { version = "=1.0.0", optional = true, features = [
     "alloc",
     "derive",
 ] }
-msgpacker = { version = "=0.4.5", optional = true }
+msgpacker = { version = "=0.4.8", optional = true }
 nachricht-serde = { version = "=0.4.0", optional = true }
-nanoserde = { version = "=0.1.37", optional = true }
-parity-scale-codec = { version = "=3.7.4", features = [
+nanoserde = { version = "=0.2.1", optional = true }
+parity-scale-codec = { version = "=3.7.5", features = [
     "full",
 ], optional = true }
-parity-scale-codec-derive = { version = "=3.7.4", optional = true }
+parity-scale-codec-derive = { version = "=3.7.5", optional = true }
 postcard = { version = "=1.1.1", features = ["alloc"], optional = true }
 pot = { version = "=3.0.1", optional = true }
 prost = { version = "=0.13.5", optional = true }
-protobuf = { version = "=3.7.1", optional = true }
+protobuf = { version = "=3.7.2", optional = true }
 rkyv = { version = "=0.8.10", optional = true }
 rmp-serde = { version = "=1.3.0", optional = true }
-ron = { version = "=0.8.1", optional = true }
-savefile = { version = "=0.18.5", optional = true }
-savefile-derive = { version = "=0.18.5", optional = true }
+ron = { version = "=0.10.1", optional = true }
+savefile = { version = "=0.18.6", optional = true }
+savefile-derive = { version = "=0.18.6", optional = true }
 serde_bare = { version = "=0.5.0", optional = true }
 serde-brief = { version = "=0.1.1", features = ["std"], optional = true }
 serde_cbor = { version = "=0.11.2", optional = true }
 serde_json = { version = "=1.0.140", features = [
     "float_roundtrip",
 ], optional = true }
-simd-json = { version = "=0.14.3", optional = true }
-simd-json-derive = { version = "=0.15.0", optional = true }
+simd-json = { version = "=0.15.1", optional = true }
+simd-json-derive = { version = "=0.16.0", optional = true }
 speedy = { version = "=0.8.7", optional = true }
-wiring = { version = "=0.2.3", optional = true }
+wiring = { version = "=0.2.4", optional = true }
 
 criterion = "=0.5.1"
 libflate = "=2.1.0"
 pprof = { version = "=0.14.0", features = ["flamegraph"], optional = true }
 rand = "=0.8.5"
-serde = { version = "=1.0.218", features = ["derive"] }
+serde = { version = "=1.0.219", features = ["derive"] }
 zstd = "=0.13.3"
 
 [features]
@@ -112,8 +112,7 @@ default-encoding-set = [
     "dlhn",
     "flatbuffers",
     "minicbor",
-    # Disabled until fixed: https://github.com/codx-dev/msgpacker/issues/17
-    # "msgpacker",
+    "msgpacker",
     "nachricht-serde",
     "nanoserde",
     "postcard",
@@ -131,9 +130,7 @@ default-encoding-set = [
     "serde_json",
     "simd-json",
     "speedy",
-    # Disabled until fixed: https://github.com/louaykamel/wiring/issues/3
-    # Also affected by the removal of `uninit_array`
-    # "wiring",
+    "wiring",
 ]
 
 # Grouped features for comparing different implementations for a specific encoding
@@ -161,11 +158,11 @@ regenerate-protobuf = ["dep:protobuf-codegen"]
 rand_pcg = "0.3.1"
 
 [build-dependencies]
-capnp = "=0.20.6"
-capnpc = { version = "=0.20.1", optional = true }
+capnp = "=0.21.1"
+capnpc = { version = "=0.21.0", optional = true }
 flatc-rust = { version = "=0.2.0", optional = true }
 prost-build = { version = "=0.13.5", optional = true }
-protobuf-codegen = { version = "=3.7.1", optional = true }
+protobuf-codegen = { version = "=3.7.2", optional = true }
 
 [[bench]]
 harness = false
