--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,7 @@ minicbor = { version = "=1.0.0", optional = true, features = [
 msgpacker = { version = "=0.4.8", optional = true }
 nachricht-serde = { version = "=0.4.0", optional = true }
 nanoserde = { version = "=0.2.1", optional = true }
+nibblecode = { version = "=0.1.0", optional = true }
 parity-scale-codec = { version = "=3.7.5", features = [
     "full",
 ], optional = true }
@@ -115,6 +116,7 @@ default-encoding-set = [
     "msgpacker",
     "nachricht-serde",
     "nanoserde",
+    "nibblecode",
     "postcard",
     "pot",
     "prost",
