--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,6 +59,7 @@ ciborium = { version = "=0.2.2", optional = true }
 databuf = { version = "=0.5.0", optional = true }
 dlhn = { version = "=0.1.7", optional = true }
 flatbuffers = { version = "=25.2.10", optional = true }
+flexbuffers = { version = "=25.2.10", optional = true }
 minicbor = { version = "=1.0.0", optional = true, features = [
     "alloc",
     "derive",
@@ -112,6 +113,7 @@ default-encoding-set = [
     "databuf",
     "dlhn",
     "flatbuffers",
+    "flexbuffers",
     "minicbor",
     "msgpacker",
     "nachricht-serde",
