--- a/Cargo.toml
+++ b/Cargo.toml
@@ -90,6 +90,7 @@ serde_json = { version = "=1.0.140", features = [
 simd-json = { version = "=0.15.1", optional = true }
 simd-json-derive = { version = "=0.16.0", optional = true }
 speedy = { version = "=0.8.7", optional = true }
+wincode = { version = "=0.2.0", optional = true, features = ["derive"] }
 wiring = { version = "=0.2.4", optional = true }
 
 criterion = "=0.5.1"
@@ -134,6 +135,7 @@ default-encoding-set = [
     "serde_json",
     "simd-json",
     "speedy",
+    "wincode",
     "wiring",
 ]
 
