--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ build = "build.rs"
 # For example, benchmarking bincode requires two features: "serde" and "bincode"
 [dependencies]
 bilrost = { version = "=0.1013.0", optional = true }
-bin-proto = { version = "=0.12.2", optional = true }
+bin-proto = { version = "=0.12.3", features = ["prepend-tags"], optional = true }
 bincode1 = { package = "bincode", version = "=1.3.3", optional = true }
 # Can't call it bincode2 because of a current issue of bincode2 (TODO: issue link?)
 bincode = { package = "bincode", version = "=2.0.1", optional = true }
