Add maintainer attribution
These benchmarks have far outgrown me, and I've had the good
fortune to meet other highly-capable people who are willing to help
maintain these benchmarks as well.

This commit removes the `author` field on all packages and adds a
list of maintainers to the README.

--- a/tools/README.md.template
+++ b/tools/README.md.template
@@ -5,6 +5,14 @@
 The goal of these benchmarks is to provide thorough and complete benchmarks for various rust
 serialization frameworks.
 
+## Maintainers
+
+These benchmarks are maintained by a small group of volunteers. Special thanks to:
+
+- [djkoloski](https://github.com/djkoloski)
+- [mumbleskates](https://github.com/mumbleskates)
+- [finnbear](https://github.com/finnbear)
+
 ## These benchmarks are a work in progress
 
 These benchmarks are still being developed and pull requests to improve benchmarks are welcome.
